--- a/11-praca_z_email_i_docker/0-nodemailer/package.json
+++ b/11-praca_z_email_i_docker/0-nodemailer/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./src/server.js",
-    "start:dev": "nodemon"
+    "start:dev": "nodemon ./src/serverAga.js"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
